--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Build Lingmo DE Docker Image
 
 on:
   #push:
@@ -12,13 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Ubuntu 24.04 Lingmo Docker image
-      run: docker buildx build \
-           --progress=plain \
-           --allow security.insecure \
-           --file Images/Ubuntu-LingmoDE \
-           --tag pikachuim/ubuntu:24.04-lingmo \
-           --build-arg OS_VERSION=24.04 \
-           --build-arg OS_VERSHOW=24.04 \
-           --build-arg OS_SYSTEMS=ubuntu \
+    - name: Build the Ubuntu 24.04 Lingmo Docker Image
+      run: docker buildx build 
+           --progress=plain 
+           --allow security.insecure 
+           --file Images/Ubuntu-LingmoDE 
+           --tag pikachuim/ubuntu:24.04-lingmo 
+           --build-arg OS_VERSION=24.04 
+           --build-arg OS_VERSHOW=24.04 
+           --build-arg OS_SYSTEMS=ubuntu 
+           .
+    
+    - uses: actions/checkout@v4
+    - name: Build the Debian 12.XX Lingmo Docker Image
+      run: docker buildx build 
+           --progress=plain 
+           --allow security.insecure 
+           --file Images/Debian-LingmoDE 
+           --tag pikachuim/debian:12.00-lingmo 
+           --build-arg OS_VERSION=12.00 
+           --build-arg OS_VERSHOW=12.00 
+           --build-arg OS_SYSTEMS=debian 
            .
